# sign_exe_windows

./: Cargo.toml
src/: main.rs
